Bug 185659 - EPS export creates a corrupted PDF
Summary: EPS export creates a corrupted PDF
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
: 223870 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-02-27 00:54 UTC by Vsevolod Krishchenko
Modified: 2013-11-06 17:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vsevolod Krishchenko 2009-02-27 00:54:12 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    Debian testing/unstable Packages

1. Create ER-diagram with single entity
2. Select 'Export As Picture' menu
3. Three (!) 'EPS image' items are presents in drop down box. Non of them works:

An error happened when exporting the image:
A problem occurred while saving diagram in /home/seva/Temp/UML/er.eps

I believe this bug related to bug 180031.
Comment 1 Pino Toscano 2010-01-26 17:31:54 UTC
The EPS image plugin provided by kdelibs actually produces a (corrupted, even) PDF instead of an EPS.
Comment 2 Pino Toscano 2010-01-26 17:37:14 UTC
My bad, looks like Umbrello does the same way, and has the same issue...
Comment 3 Pino Toscano 2010-01-26 17:42:55 UTC
SVN commit 1080656 by pino:

same fix as in the kdelibs eps exporter:
make sure that the format of the output file is really postscript

fixed for kde 4.4
BUG: 185659


 M  +1 -0      umlviewimageexportermodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1080656
Comment 4 Pino Toscano 2010-01-26 17:44:30 UTC
SVN commit 1080657 by pino:

backport SVN commit 1080656 by pino:

same fix as in the kdelibs eps exporter:
make sure that the format of the output file is really postscript

CCBUG: 185659


 M  +1 -0      umlviewimageexportermodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1080657
Comment 5 Pino Toscano 2010-01-26 17:45:48 UTC
*** Bug 223870 has been marked as a duplicate of this bug. ***
Comment 6 Ralf Habacker 2013-11-06 17:32:49 UTC
set version-fixed-in from 4.7.4 changelog