same fix as in the kdelibs eps exporter: make sure that the format of the output file is really postscript

fixed for kde 4.4
BUG: 185659

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1080656